fdo#44053 fix RTF import of implicit horizontal table cell merges