writerfilter/source/rtftok/rtfdocumentimpl.cxx
@@ -260,7 +260,6 @@ RTFDocumentImpl::RTFDocumentImpl(uno::Reference<uno::XComponentContext> const& x
     m_aFontIndexes(),
     m_aColorTable(),
     m_bFirstRun(true),
-    m_bFirstRow(true),
     m_bNeedPap(true),
     m_bNeedCr(false),
     m_bNeedPar(true),
@@ -452,8 +451,6 @@ void RTFDocumentImpl::parBreak()
 
     // If we are not in a table, then the next table row will be the first one.
     RTFValue::Pointer_t pValue = m_aStates.top().aParagraphSprms.find(NS_sprm::LN_PFInTable);
-    if (!pValue.get())
-        m_bFirstRow = true;
 
     // start new one
     Mapper().startParagraphGroup();
@@ -1362,7 +1359,6 @@ int RTFDocumentImpl::dispatchSymbol(RTFKeyword nKeyword)
         case RTF_ROW:
         case RTF_NESTROW:
             {
-                m_bFirstRow = false;
                 if (m_aStates.top().nCells)
                 {
                     // Make a backup before we start popping elements
@@ -2281,11 +2277,8 @@ int RTFDocumentImpl::dispatchValue(RTFKeyword nKeyword, int nParam)
             {
                 int nCellX = nParam - m_aStates.top().nCellX;
                 m_aStates.top().nCellX = nParam;
-                if (m_bFirstRow)
-                {
-                    RTFValue::Pointer_t pXValue(new RTFValue(nCellX));
-                    m_aStates.top().aTableRowSprms->push_back(make_pair(NS_ooxml::LN_CT_TblGridBase_gridCol, pXValue));
-                }
+                RTFValue::Pointer_t pXValue(new RTFValue(nCellX));
+                m_aStates.top().aTableRowSprms->push_back(make_pair(NS_ooxml::LN_CT_TblGridBase_gridCol, pXValue));
                 m_aStates.top().nCells++;
 
                 // Push cell properties.
